<resources>
    <string name="app_name">P07 SMS Retriever</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="number">Only SMS containing this number</string>
    <string name="retrieve">Retrieve SMS</string>
    <string name="enterNum">Enter number here</string>
    <string name="word">Only SMS containing this word</string>
    <string name="enterWord">Enter word here</string>
    <string name="btn">Email</string>
</resources>
