<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FragmentNumber"
    android:background="#BBFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvFragNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/etSearchNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterNum"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnRetrieveNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retrieve" />

            <Button
                android:id="@+id/btnEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvRetrieveNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black" />

    </LinearLayout>

</ScrollView>