<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FragmentWord"
    android:background="#FFDBDB">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvFragWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/word"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/etSearchWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterWord"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnRetrieveWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retrieve" />

        <TextView
            android:id="@+id/tvRetrieveWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black" />

    </LinearLayout>

</ScrollView>